# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/5.1/en/

Version 5.1.46

  - Fix for Bug#79612 (22362474), CONNECTION ATTRIBUTES LOST WHEN CONNECTING WITHOUT DEFAULT DATABASE.

Version 5.1.45

  - Fix for Bug#27131768, NULL POINTER EXCEPTION IN CONNECTION.

  - Fix for Bug#88232 (27047676), c/J does not rollback transaction when autoReconnect=true.

  - Fix for Bug#88242 (27040063), autoReconnect and socketTimeout JDBC option makes wrong order of client packet.

  - Fix for Bug#88021 (26939943), High GC pressure when driver configured with serversideprepared statements.
    Thanks to Johnathan Crawford for his contribution.

  - Fix for Bug#26724085, CHARSET MAPPING TO BE UPDATED FOR MYSQL 8.0.3.

  - Fix for Bug#26794652, TEST FAILING DUE TO BINARY LOGGING ENABLED BY DEFAULT IN MYSQL 8.0.3.

  - Fix for Bug#26794602, TESTS FAILING DUE TO CHANGE IN INFORMATION_SCHEMA.INNODB_SYS_* NAMING.

  - Fix for Bug#87704 (26771560), THE STREAM GETS THE RESULT SET ?THE DRIVER SIDE GET WRONG ABOUT GETLONG().

Version 5.1.44

  - Fix for Bug#87429 (26633984), repeated close of ServerPreparedStatement causes memory leak.
    Thanks to Eduard Gurskiy for his contribution.

  - Fix for Bug#87379 (26646676), Perform actual TLS capabilities check when restricting TLSv1.2.
    Thanks to Todd Farmer for his contribution.

  - Fix for Bug#85601 (25777822), Unit notation is missing in the description of the property involved in the time.

  - Fix for Bug#87153 (26501245), INCORRECT RESULT OF DBMD.GETVERSIONCOLUMNS() AGAINST MYSQL 8.0.2+.

  - Fix for Bug#26440544, CONNECTOR/J SHOULD NOT USE TX_{READ_ONLY,ISOLATION} WHICH IS PLANNED FOR REMOVAL.

Version 5.1.43

  - Fix for Bug#26399958, UNABLE TO CONNECT TO MYSQL 8.0.3.

  - Fix for Bug#78313 (21931572), proxies not handling Object.equals(Object) calls correctly.

  - Fix for Bug#85885 (25874048), resultSetConcurrency and resultSetType are swapped in call to prepareStatement.
